--- a/3-column-count/src/index.html
+++ b/3-column-count/src/index.html
@@ -18,40 +18,40 @@
         class="flex flex-col items-center md:flex-row md:justify-center w-3/4 py-8 h-max m-auto rounded-md"
       >
         <div class="text-white bg-[#E38826] p-14 min-h-[300px] max-w-[350px] flex flex-col space-y-8">
-          <img src="../images/icon-sedans.svg" alt="Sedan" class="w-20" />
-          <h3 class="uppercase leading-8 font-semibold">Sedans</h3>
+          <img src="../images/icon-sedans.svg" alt="Sedan" class="w-14" />
+          <h3 class="uppercase leading-8 text-lg font-semibold tracking-tighter scale-y-[2]">Sedans</h3>
           <p class="h-32 text-sm">
             Choose a sedan for its affordability and excellent fuel economy.
             Ideal for cruising in the city or on your next road trip.
           </p>
           <button
-            class="bg-white px-5 py-2 font-semibold rounded-full border-2 w-max border-white border-solid text-[#E38826] hover:text-white hover:bg-[#E38826] transition-all"
+            class="bg-white px-5 py-2 font-semibold text-xs rounded-full border-2 w-max border-white border-solid text-[#E38826] hover:text-white hover:bg-[#E38826] transition-all"
           >
             Learn more
           </button>
         </div>
         <div class="text-white bg-[#006970] p-14 min-h-[300px] max-w-[350px] flex flex-col space-y-8">
-          <img src="../images/icon-suvs.svg" alt="SUVs" class="w-20"/>
-          <h3 class="uppercase leading-8 font-semibold">Suvs</h3>
+          <img src="../images/icon-suvs.svg" alt="SUVs" class="w-14"/>
+          <h3 class="uppercase leading-8 text-lg font-semibold tracking-tighter scale-y-[2]">Suvs</h3>
           <p class="h-32 text-sm">
             Take an SUV for its spacious interior, power, and versatility.
             Perfect for your next family vacation and off-road adventures.
           </p>
           <button
-            class="bg-white px-5 font-semibold border-3 border-2 w-max border-white border-solid py-2 rounded-full text-[#006970] hover:text-white hover:bg-[#006970] transition-all"
+            class="bg-white px-5 font-semibold text-xs border-3 border-2 w-max border-white border-solid py-2 rounded-full text-[#006970] hover:text-white hover:bg-[#006970] transition-all"
           >
             Learn more
           </button>
         </div>
         <div class="text-white bg-[#004241] p-14 min-h-[300px] max-w-[350px] flex flex-col space-y-8">
-          <img src="../images/icon-luxury.svg" alt="Luxury" class="w-20"/>
-          <h3 class="uppercase leading-8 font-semibold">Luxury</h3>
+          <img src="../images/icon-luxury.svg" alt="Luxury" class="w-14"/>
+          <h3 class="uppercase leading-8 text-lg font-semibold tracking-tighter scale-y-[2]">Luxury</h3>
           <p class="h-32 text-sm">
             Cruise in the best car brands without the bloated prices. Enjoy the
             enhanced comfort of a luxury rental and arrive in style.
           </p>
           <button
-            class="bg-white px-5 py-2 font-semibold rounded-full border-2 w-max border-white border-solid text-[#004241] hover:text-white hover:bg-[#004241] transition-all"
+            class="bg-white px-5 py-2 font-semibold text-xs rounded-full border-2 w-max border-white border-solid text-[#004241] hover:text-white hover:bg-[#004241] transition-all"
           >
             Learn more
           </button>
